2011-01-12  Tony Chang  <tony@chromium.org>

        Reviewed by Ojan Vafai.

        output the value of input and textarea nodes when using dump-as-markup
        https://bugs.webkit.org/show_bug.cgi?id=52319

        * editing/inserting/5607069-2-expected.txt:
        * editing/inserting/5607069-3-expected.txt:
        * editing/selection/dump-as-markup-expected.txt:
        * editing/selection/dump-as-markup-form-text-expected.txt: Added.
        * editing/selection/dump-as-markup-form-text.html: Added.
        * fast/parser/object-with-textarea-fallback-expected.txt:
        * html5lib/runner.html:
        * html5lib/webkit-resumer.html:
        * resources/dump-as-markup.js:
        (Markup.useHTML5libOutputFormat): Add a flag for html5lib compatibility
        (Markup._get):

2011-01-12  Robert Hogan  <robert@webkit.org>

        Unreviewed, add expected results.

        [Qt] Add new expected results from r75632

        https://bugs.webkit.org/show_bug.cgi?id=42887

        * platform/qt/fast/forms/search-display-none-cancel-button-expected.txt: Added.
        * platform/qt/fast/forms/search-placeholder-value-changed-expected.txt: Added.
        * platform/qt/fast/forms/search-rtl-expected.txt: Added.
        * platform/qt/fast/forms/search-styled-expected.txt: Added.
        * platform/qt/fast/forms/search-transformed-expected.txt: Added.
        * platform/qt/fast/forms/search-zoomed-expected.txt: Added.

2011-01-12  Robert Hogan  <robert@webkit.org>

        Unreviewed, update expected results.

        [Qt] Update expected results from r75632

        https://bugs.webkit.org/show_bug.cgi?id=42887

        * platform/qt/fast/css/pseudo-cache-stale-expected.txt:
        * platform/qt/fast/css/text-input-with-webkit-border-radius-expected.txt:
        * platform/qt/fast/forms/search-cancel-button-style-sharing-expected.txt:
        * platform/qt/fast/forms/search-vertical-alignment-expected.txt:

2011-01-12  Robert Hogan  <robert@webkit.org>
