@@ -1,3 +1,13 @@
+2011-01-11  Matthew Delaney  <mdelaney@apple.com>
+
+        Reviewed by Simon Fraser.
+
+        Max area bound needed in creation of IOSurface in ImageBufferCG.cpp
+        https://bugs.webkit.org/show_bug.cgi?id=52172
+
+        * fast/canvas/canvas-large-dimensions.html: Added.
+        * fast/canvas/canvas-large-dimensions-expected.txt: Added.
+
 2011-01-12  Tony Chang  <tony@chromium.org>
 
         Reviewed by Ojan Vafai.
